[package]
name = "sculk"
description = "A library for handling various data found in Minecraft's NBT files."
version = "0.2.21"
edition = "2021"
license = "MIT"
authors = ["VilleOlof"]
readme = "README.md"
repository = "https://github.com/VilleOlof/sculk"
homepage = "https://github.com/VilleOlof/sculk"
keywords = ["minecraft", "nbt", "data", "region", "chunk"]
categories = ["data-structures", "game-development", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simdnbt = "0.6.0"
thiserror = "1.0.61"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
flate2 = "1.0.30"

[features]
stats = ["dep:serde"]
serde = ["dep:serde"]
